FIX: Fix alignment of simple search button when using $simple_search_pills_view [t34797]
git-svn-id: http://svn.resourcespace.com/svn/rs/trunk@23148 c08608d7-6e46-0410-86ca-f2a6f1370df5

--- a/css/global.css
+++ b/css/global.css
@@ -2453,13 +2453,11 @@ input[type="text"]#iconpicker-input {
 }
 
 /* jQuery tagEditor */
-
 .SearchSpace .tag-editor{
-    border-radius: 4px;
+    border-radius: 6px;
     min-height: 28px;
     width: 250px;
-    border: 1px solid rgba(0,0,0,0.25);
-    box-shadow: inset 0 1px 2px 0 rgba(0,0,0,0.1);
+    display: inline-block;
 }
 
 .SearchSpace .tag-editor li {
